--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,8 +5,9 @@
     android:id="@+id/load2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/group_19"
+
     tools:context=".login">
+
 
     <LinearLayout
         android:id="@+id/linearLayout5"
@@ -95,6 +96,17 @@
             android:textSize="18dp"
             android:textStyle="bold" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/reset"
+            android:padding="10dp"
+            android:text="Forgot password"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:gravity="center"
+            />
+
 
     </LinearLayout>
 
@@ -108,4 +120,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.47000003" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:orientation="vertical"
+        android:background="@drawable/home_bar"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="204dp">
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="25dp"
+            android:text="Login" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
