--- a/app/src/main/res/layout/activity_abount.xml
+++ b/app/src/main/res/layout/activity_abount.xml
@@ -4,8 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/group_19"
+
     tools:context=".abount">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:orientation="vertical"
+        android:background="@drawable/home_bar"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="204dp">
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+
+            android:textColor="@color/white"
+            android:textSize="25dp"
+            android:text="About" />
+    </LinearLayout>
+
 
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -13,35 +34,83 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
 
-        android:layout_marginTop="89dp"
+        android:layout_marginTop="200dp"
 
         android:layout_marginBottom="276dp"
-        android:src="@drawable/propic"
+        android:src="@drawable/propc"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.52"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="MissingConstraints" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="408dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="50dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/contactnum"
         tools:ignore="MissingConstraints">
 
-        <com.skydoves.elasticviews.ElasticImageView
-            android:id="@+id/button4"
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:padding="5dp"
-            android:src="@drawable/button_contact_us" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="100dp"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+
+            <LinearLayout
+                android:id="@+id/mailcntact"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp"
+                android:gravity="center">
+
+                <com.skydoves.elasticviews.ElasticImageView
+
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="20dp"
+                    android:src="@drawable/gmail" />
+
+                <TextView
+                    android:id="@+id/textView22"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="contact via mail" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/facebok"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+                <com.skydoves.elasticviews.ElasticImageView
+
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="20dp"
+                    android:src="@drawable/facebook" />
+
+                <TextView
+                    android:id="@+id/textView23"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="contact via facebook" />
+            </LinearLayout>
+
+        </LinearLayout>
 
 
         <com.skydoves.elasticviews.ElasticImageView
@@ -51,30 +120,35 @@
             android:padding="5dp"
             android:src="@drawable/button_terms" />
 
-        <com.skydoves.elasticviews.ElasticImageView
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:padding="5dp"
-            android:src="@drawable/button_privacy" />
-
 
     </LinearLayout>
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="241dp"
-        android:layout_height="73dp"
-        android:layout_marginTop="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:gravity="center"
-        android:text="About"
-        android:textColor="@color/white"
-        android:textSize="35dp"
+        android:text="Developer  : Shehara Dewanagala"
+        android:textColor="@color/black"
+        android:textSize="18dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.49" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_image"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/contactnum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="Loading.. "
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
