--- a/app/src/main/res/layout/activity_ao.xml
+++ b/app/src/main/res/layout/activity_ao.xml
@@ -16,7 +16,7 @@
         android:gravity="center"
 
         android:paddingTop="10dp"
-        android:text="TextView"
+        android:text="@string/loading"
 
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
