--- a/app/src/main/res/layout/activity_cs.xml
+++ b/app/src/main/res/layout/activity_cs.xml
@@ -34,7 +34,7 @@
             android:textSize="25dp"
             android:gravity="center"
             android:layout_height="wrap_content"
-            android:text="How To Use" />
+            android:text="@string/how_to_use" />
     </LinearLayout>
 
     <ScrollView
@@ -65,7 +65,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="Add Product"
+                    android:text="@string/add_product"
                     android:textSize="18dp"
                     android:textStyle="bold" />
 
@@ -73,7 +73,7 @@
                     android:id="@+id/textView10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="You can add products using all products page."
+                    android:text="@string/you_can_add_products_using_all_products_page"
                     android:textSize="18dp" />
 
                 <TextView
@@ -81,14 +81,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="all products > add new product "
+                    android:text="@string/all_products_add_new_product"
                     android:textStyle="italic" />
 
                 <TextView
                     android:id="@+id/textView12"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="note{ product id ,product title ,product links are required.}"
+                    android:text="@string/note_product_id_product_title_product_links_are_required"
                     android:textColor="@color/red" />
 
                 <ImageView
@@ -209,6 +209,75 @@
                     android:layout_gravity="center"
                     app:srcCompat="@drawable/add_product" />
             </LinearLayout>
+
+
+
+            <LinearLayout
+                android:id="@+id/deleteorder"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="Delete Order"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="You can delete a order simply tap the order and choose delete in popup window.
+"
+                    android:textSize="18dp" />
+
+                <ImageView
+
+                    android:layout_width="300dp"
+                    android:layout_height="500dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/delete_product" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/updateorder"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="Update Order"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="You can update a order simply tap the order and choose edit in popup window.and you can edit order.\nafter edit your order choose update order."
+                    android:textSize="18dp" />
+
+                <ImageView
+
+                    android:layout_width="300dp"
+                    android:layout_height="500dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/delete_product" />
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
