--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -48,12 +48,13 @@
 
         android:hint="Contact Details" />
 
-    <Button
+    <com.skydoves.elasticviews.ElasticImageView
         android:id="@+id/buttonp"
         android:layout_width="match_parent"
-        android:background="@drawable/button2"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:text="Update Product" />
+        android:layout_height="75dp"
+        android:padding="5dp"
+        android:src="@drawable/button_updatepro" />
+
+
 
 </LinearLayout>
