--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -93,6 +93,31 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/pay_text_input_layout"
+            android:layout_width="400dp"
+
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/pay_num"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="10dp"
+                android:ems="10"
+                android:hint="Payment"
+                android:inputType="textPersonName" />
+
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/password_text_input_layout"
             android:layout_width="400dp"
@@ -127,7 +152,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:ems="10"
-                android:hint="Password"
+                android:hint="Re Enter Password"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
