--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -37,6 +37,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
         tools:ignore="MissingConstraints">
 
@@ -75,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:weightSum="2"
-
+            android:layout_marginBottom="25dp"
             android:orientation="horizontal">
 
 
@@ -95,13 +96,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:textSize="18dp"
+                android:textStyle="bold"
                 android:layout_weight="1" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-
+            android:layout_marginBottom="20dp"
             android:weightSum="2"
             android:orientation="horizontal">
 
@@ -121,10 +124,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:textSize="18dp"
+                android:textStyle="bold"
                 android:layout_weight="1"
                 />
         </LinearLayout>
-       <!-- <LinearLayout
+      <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:weightSum="2"
@@ -135,18 +140,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:textSize="20dp"
+                android:textStyle="bold"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:text="Payment Receipt Number" />
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/prec"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:textSize="18dp"
+                android:textStyle="bold"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:text="" />
         </LinearLayout>
-        -->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
